Minor content tweaks & case changes in headings & buttons

--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -121,8 +121,8 @@ function activeLink(urlPart) {
       <section class="hero">
         <div class="hero__content">
           <h1 class="hero__heading">Introducing <span class="hero__heading--highlight">Nightwatch v3</span></h1>
-          <p class="hero__sub-heading">No-compromise test automation framework with powerful set of tools to write, run and
-            debug your tests across web and native mobile applications.</p>
+          <p class="hero__sub-heading">No-compromise test automation framework with a powerful set of tools to write, run and debug your tests across web and native mobile applications.
+          </p>
         </div>
     
         <div class="hero__action">
@@ -131,7 +131,7 @@ function activeLink(urlPart) {
             <button class="hero__action-copy-command-button">Copy</button>
           </div>
           <a href="/guide/quickstarts/create-and-run-a-nightwatch-test.html" class="hero__action-button--get-started">Get
-            started</a>
+            Started</a>
         </div>
     
         <div class="hero__companies" role="region" aria-label="social proof">
@@ -157,16 +157,14 @@ function activeLink(urlPart) {
         <article class="features__content features__content--reverse">
           <div class="features__content-wrapper">
             <div class="features__timeline-dot" role="presentation"></div>
-            <h3 class="features__content-wrapper-heading">Web, Mobile Native</h3>
+            <h3 class="features__content-wrapper-heading">Web, mobile native</h3>
             <div class="features__content-wrapper-description">
               <p class="features__content-wrapper-description-title">One framework for all platforms</p>
               <ul class="features__content-wrapper-description-list">
-                <li class="features__content-wrapper-description-list-item"><strong>Mobile Web</strong>Test on real mobile
-                  browsers or pre-installed simulators and emulators.</li>
-                <li class="features__content-wrapper-description-list-item"><strong>Native Mobile</strong>Test your native
-                  iOS and Android apps with Nightwatch.</li>
-                <li class="features__content-wrapper-description-list-item"><strong>Real Desktop Browsers</strong>Avoid
-                  compromises with browser engines, test on the real thing.</li>
+                <li class="features__content-wrapper-description-list-item"><strong>Mobile web</strong>Test on your web apps on real mobile devices, and scale easily by connecting to cloud grids</li>
+                <li class="features__content-wrapper-description-list-item"><strong>Native mobile</strong>Test your native
+                  iOS and Android apps with Nightwatch</li>
+                <li class="features__content-wrapper-description-list-item"><strong>Real desktop browsers</strong>Test on real browsers which accurately reflect your users’ environment</li>
               </ul>
             </div>
           </div>
@@ -257,14 +255,11 @@ function activeLink(urlPart) {
             <div class="features__timeline-dot features__timeline-dot--reverse" role="presentation"></div>
             <h3 class="features__content-wrapper-heading">Powerful debugging</h3>
             <div class="features__content-wrapper-description">
-              <p class="features__content-wrapper-description-title">Save time hunting for bugs</p>
+              <p class="features__content-wrapper-description-title">Searching for bugs just got easy</p>
               <ul class="features__content-wrapper-description-list">
-                <li class="features__content-wrapper-description-list-item"><strong>Pinpoint</strong>Built-in HTML reporter
-                  with test statuses and HTTP logs to identify the source.</li>
-                <li class="features__content-wrapper-description-list-item"><strong>Dig deeper</strong>Travel back in time
-                  and see DOM History before and after every command.</li>
-                <li class="features__content-wrapper-description-list-item"><strong>Replicate</strong>Pause and debug your
-                  tests by trying out commands in a REPL interface.</li>
+                <li class="features__content-wrapper-description-list-item"><strong>Pinpoint</strong>Identify the source with the built-in HTML reporter with test statuses and HTTP logs</li>
+                <li class="features__content-wrapper-description-list-item"><strong>Dig deeper</strong>Travel back in time and see DOM History before and after every command</li>
+                <li class="features__content-wrapper-description-list-item"><strong>Replicate</strong>Pause and debug your tests by trying out commands in a REPL interface</li>
               </ul>
             </div>
           </div>
@@ -372,14 +367,12 @@ function activeLink(urlPart) {
             <div class="features__timeline-dot" role="presentation"></div>
             <h3 class="features__content-wrapper-heading">Designed for scale</h3>
             <div class="features__content-wrapper-description">
-              <p class="features__content-wrapper-description-title">Automate all your edge cases</p>
+              <p class="features__content-wrapper-description-title">Millions of tests? No problem</p>
               <ul class="features__content-wrapper-description-list">
+                <li class="features__content-wrapper-description-list-item"><strong>Default parallelization & orchestration</strong>Test faster with default parallelization across multiple browsers</li>
+                <li class="features__content-wrapper-description-list-item"><strong>Cloud grid support</strong>Scale with third-party grids —BrowserStack, or others</li>
                 <li class="features__content-wrapper-description-list-item"><strong>Complex gestures and
-                    interactions</strong>Test everything from pinch-zoom to multi-tab and iFrames.</li>
-                <li class="features__content-wrapper-description-list-item"><strong>Default parallelization</strong>Test
-                  faster with default parallelization across multiple browsers.</li>
-                <li class="features__content-wrapper-description-list-item"><strong>Cloud grid support</strong>Scale with
-                  third-party grid—BrowserStack, Sauce Labs or others.</li>
+                  interactions</strong>Test everything from pinch-zoom to multi-tab and iFrames</li>
               </ul>
             </div>
           </div>
@@ -1307,19 +1300,18 @@ function activeLink(urlPart) {
         <div class="capabilities--single-column">
           <article class="capabilities__card">
             <div class="capabilities__card-content">
-              <h3 class="capabilities__card-heading">Start in 60 seconds</h3>
+              <h3 class="capabilities__card-heading">Get started in 60 seconds</h3>
               <div class="capabilities__card-text">
                 <ul class="capabilities__card-text-list">
                   <li class="capabilities__card-text-list-item"><strong>Create Nightwatch</strong>One command to
-                    install everything.</li>
-                  <li class="capabilities__card-text-list-item"><strong>IDE Extension</strong>Write, run, and debug with VS
-                    Code.</li>
-                  <li class="capabilities__card-text-list-item"><strong>Record and replay</strong>Get started without
-                    writing any test script.</li>
+                    install everything</li>
+                  <li class="capabilities__card-text-list-item"><strong>IDE extension</strong>Write, run, and debug with VS
+                    Code</li>
+                  <li class="capabilities__card-text-list-item"><strong>Record and replay</strong>No-code automation using Chrome recorder</li>
                 </ul>
               </div>
               <a href="/guide/quickstarts/create-and-run-a-nightwatch-test.html" class="capabilities__card-button">Get
-                started
+                Started
                 <svg role="img" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <title>The arrow icon indicates that you can visit this page</title>
                   <path d="M13.8411 5.88806L19.9689 12.0159M19.9689 12.0159L13.8411 18.1437M19.9689 12.0159L4.21167 12.0159"
@@ -1375,14 +1367,14 @@ function activeLink(urlPart) {
               <div class="capabilities__card-text">
                 <ul class="capabilities__card-text-list">
                   <li class="capabilities__card-text-list-item"><strong>API</strong>Test incoming requests, request headers,
-                    and post data.</li>
-                  <li class="capabilities__card-text-list-item"><strong>Accessibility</strong>Native integration with axe.
+                    and post data</li>
+                  <li class="capabilities__card-text-list-item"><strong>Accessibility</strong>Native integration with axe
                   </li>
-                  <li class="capabilities__card-text-list-item"><strong>Visual Testing</strong>Compare screenshots against
-                    baselines.</li>
+                  <li class="capabilities__card-text-list-item"><strong>Visual testing</strong>Compare screenshots against
+                    baselines</li>
                 </ul>
               </div>
-              <a href="/about/highlights/types-of-testing.html" class="capabilities__card-button">Learn more<svg role="img"
+              <a href="/about/highlights/types-of-testing.html" class="capabilities__card-button">Learn More<svg role="img"
                   width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <title>The arrow icon indicates that you can visit this page</title>
                   <path d="M13.8411 5.88806L19.9689 12.0159M19.9689 12.0159L13.8411 18.1437M19.9689 12.0159L4.21167 12.0159"
@@ -1505,14 +1497,14 @@ function activeLink(urlPart) {
               <div class="capabilities__card-text">
                 <ul class="capabilities__card-text-list">
                   <li class="capabilities__card-text-list-item"><strong>Unit</strong>Unit testing mode with support
-                    for test-doubles.</li>
+                    for test-doubles</li>
                   <li class="capabilities__card-text-list-item"><strong>Component</strong>Test components with Angular,
-                    React, and more.</li>
+                    React, and more</li>
                   <li class="capabilities__card-text-list-item"><strong>Integration</strong>Write integration tests
-                    using Chai assertions.</li>
+                    using Chai assertions</li>
                 </ul>
               </div>
-              <a href="/about/highlights/beyond-e2e.html" class="capabilities__card-button">Learn more<svg role="img"
+              <a href="/about/highlights/beyond-e2e.html" class="capabilities__card-button">Learn More<svg role="img"
                   width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <title>The arrow icon indicates that you can visit this page</title>
                   <path d="M13.8411 5.88806L19.9689 12.0159M19.9689 12.0159L13.8411 18.1437M19.9689 12.0159L4.21167 12.0159"
@@ -1769,7 +1761,7 @@ function activeLink(urlPart) {
             <p class="performance__content-description-text">Experience lightning-fast tests with Nightwatch irrespective of
               whether you run your tests on a single machine or multiple VMs.</p>
             <a href="https://github.com/nightwatchjs/performance_benchmarking"
-              class="performance__content-description-button">Run sample test</a>
+              class="performance__content-description-button">Run Sample Tests</a>
           </div>
         </article>
       </section>
@@ -1854,10 +1846,10 @@ function activeLink(urlPart) {
                   </svg>
                 </div>
                 <div class="comparison__content-wrapper-card-description">
-                  <h3 class="comparison__content-wrapper-card-description-title">Real Browsers</h3>
+                  <h3 class="comparison__content-wrapper-card-description-title">Real browsers</h3>
                   <p class="comparison__content-wrapper-card-description-subtitle">Run your tests on real desktop and mobile
                     browsers
-                    instead of browser engines.</p>
+                    instead of browser engines</p>
                 </div>
               </article>
               <article class="comparison__content-wrapper-card">
@@ -1889,10 +1881,10 @@ function activeLink(urlPart) {
                   </svg>
                 </div>
                 <div class="comparison__content-wrapper-card-description">
-                  <h3 class="comparison__content-wrapper-card-description-title">Native Mobile Testing</h3>
+                  <h3 class="comparison__content-wrapper-card-description-title">Native mobile testing</h3>
                   <p class="comparison__content-wrapper-card-description-subtitle">Test your native iOS and Android
                     applications without
-                    any learning curve.</p>
+                    any learning curve</p>
                 </div>
               </article>
               <article class="comparison__content-wrapper-card">
@@ -1930,14 +1922,14 @@ function activeLink(urlPart) {
                   </svg>
                 </div>
                 <div class="comparison__content-wrapper-card-description">
-                  <h3 class="comparison__content-wrapper-card-description-title">Web Standards</h3>
+                  <h3 class="comparison__content-wrapper-card-description-title">Web standards</h3>
                   <p class="comparison__content-wrapper-card-description-subtitle">Nightwatch follows W3C protocol so your
                     interactions
-                    reflect a real user.</p>
+                    reflect a real user</p>
                 </div>
               </article>
             </div>
-            <a href="/guide/comparison-with-leading-frameworks.html" class="comparison__content-wrapper-button">Compare with cypress and playwright</a>
+            <a href="/guide/comparison-with-leading-frameworks.html" class="comparison__content-wrapper-button">Compare with Cypress and Playwright</a>
           </div>
         </article>
       </section>
@@ -2037,7 +2029,7 @@ function activeLink(urlPart) {
 
         <div class="integration__timeline-dot" role="presentation"></div>
 
-        <h2 class="integration__heading">Seamlessly<span class="integration__heading--highlight">Integrate with
+        <h2 class="integration__heading">Seamlessly<span class="integration__heading--highlight">integrate with
             Nightwatch</span></h2>
     
         <div class="integration__content" role="region" aria-label="Nightwatch Integrations">
@@ -2673,7 +2665,7 @@ function activeLink(urlPart) {
               <button class="call-to-action-content-action-copy-command-button">Copy</button>
             </div>
             <a href="/guide/quickstarts/create-and-run-a-nightwatch-test.html"
-              class="call-to-action-content-action-button--get-started">Get started</a>
+              class="call-to-action-content-action-button--get-started">Get Started</a>
           </div>
         </div>
       </section>
