--- a/src/includes/utils.ejs
+++ b/src/includes/utils.ejs
@@ -5,7 +5,7 @@
       // call on next available tick
       setTimeout(fn, 1);
     } else {
-      document.addEventListener('DOMContentLoaded', fn);
+      document.addEventListener('load', fn);
     }
   }
 
