--- a/src/includes/docsearch.ejs
+++ b/src/includes/docsearch.ejs
@@ -1,22 +1,13 @@
 <script src="https://cdn.jsdelivr.net/npm/@docsearch/js@3"></script>
+<script src="https://cdn.jsdelivr.net/npm/@docsearch/js@3"></script>
 <script>
   docsearch({
     appId: 'H6WO0X38VS',
-    indexName: 'crawler_nightwatchjs_v3',
+    indexName: 'crawler_nightwatchjs',
     container: '#docsearch',
     apiKey: '11a50b1fdb81a04d20cb9f0a711f9a69',
-    transformItems: function (items) {
-      return items.map(function (item) {
-        if (!item.content) {
-          item.content = item.url.replace('#apimethod-page', '');
-        }
-        if (item.hierarchy && !item.hierarchy.lvl1) {
-          item.hierarchy.lvl1 = item.content.replace('https://nightwatchjs.org/', '');
-          item.type = 'lvl1';
-        }
-        return item;
-      });
+    getMissingResultsUrl({ query }) {
+      return `https://github.com/nightwatchjs/nightwatch-docs/issues/new?title=${query}`;
     },
-    debug: false
   });
 </script>
