--- a/src/includes/docsearch.ejs
+++ b/src/includes/docsearch.ejs
@@ -3,7 +3,7 @@
 <script>
   docsearch({
     appId: 'H6WO0X38VS',
-    indexName: 'crawler_nightwatchjs',
+    indexName: 'crawler_nightwatchjs_v3',
     container: '#docsearch',
     apiKey: '11a50b1fdb81a04d20cb9f0a711f9a69',
     getMissingResultsUrl({ query }) {
