--- a/src/includes/sections/about.ejs
+++ b/src/includes/sections/about.ejs
@@ -181,7 +181,7 @@
                   <h4>Ravi Sawlani</h4>
                   <h6>Contributor</h6>
                   <p>
-                    <span class="twitter social"><a href="https://twitter.com/gravity_vi" target="_blank"
+                    <span class="twitter social"><a href="https://twitter.com/binayak_ghosh" target="_blank"
                                                     title="Ravi Sawlani on Twitter"></a></span>
                     <span class="github social"><a href="https://github.com/gravityvi" target="_blank"
                                                    title="Ravi Sawlani on Twitter"></a></span>
@@ -196,6 +196,19 @@
                   <p>
                     <span class="github social"><a href="https://github.com/Dharin-shah" target="_blank"
                                                    title="Dharin Shah on Twitter"></a></span>
+                  </p>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="profile binayak">
+                  <div class="profile-pic"></div>
+                  <h4>Binayak</h4>
+                  <h6>Contributor</h6>
+                  <p>
+                    <span class="twitter social"><a href="https://twitter.com/binayak_ghosh" target="_blank"
+                      title="Binayak on Twitter"></a></span>
+<span class="github social"><a href="https://github.com/swrdfish" target="_blank"
+                     title="Binayak on Github"></a></span>
                   </p>
                 </div>
               </div>
