--- a/public/css/style.css
+++ b/public/css/style.css
@@ -882,6 +882,10 @@ section[data-page-uri] {
   background-image: url(https://avatars.githubusercontent.com/u/8616130?v=4);
 }
 
+.binayak .profile-pic {
+  background-image: url(https://pbs.twimg.com/profile_images/972952007127396353/SI-e-RLN_400x400.jpg);
+}
+
 #team h4 {
   text-align: center;
   padding-top: 10px;
