--- a/src/includes/navbar.ejs
+++ b/src/includes/navbar.ejs
@@ -171,7 +171,7 @@
           </ul>
         </li>
       </ul>
-      <button class="navigation-menu-toggle" id="mobileMenuToggle">
+      <button class="navigation-menu-toggle" id="mobileMenuToggle" aria-label="Mobile menu Button">
         <svg viewBox="0 0 12 10" class="hamburger" height="30px" width="30px">
             <path d="M10,2 L2,2" class="bar-1"></path>
             <path d="M2,5 L10,5" class="bar-2"></path>
